<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/white"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:layout_margin="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/comigue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/black">
        <requestFocus/>
    </EditText>
    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="2px"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_marginTop="10px"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/black"
        />
    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="2px"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="entrarOnClick"
        android:text="@string/entrar"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10px"
        style="@style/AudioFileInfoOverlayText"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="cadastrarOnClick"
        android:text="@string/cadastrar"
        android:textColor="@color/black"
        android:layout_marginTop="10px"
        android:background="@color/white"
        style="@style/AudioFileInfoOverlayText"/>

</LinearLayout>