<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/list_item"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="62sp"
        android:weightSum="1"
        android:layout_weight="0.15">

        <Button
            android:id="@+id/btn_voltar_perfil"
            android:onClick="retornarInicio"
            android:layout_gravity="center"
            android:background="@drawable/back_arrow"
            android:layout_margin="15sp"
            android:layout_width="35sp"
            android:layout_height="35sp" />

        <TextView
            android:text="Editar Perfil"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="215dp"
            android:layout_height="65sp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:padding="6sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/editar_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="6sp"
        android:textColor="@color/black">
        <requestFocus/>
    </EditText>
    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="2px"/>


    <!--Texto e campo para e-mail-->
    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:padding="6sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editar_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        />
    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="2px"/>


    <!--Texto e campo para celular-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular"
        android:padding="6sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editar_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6sp"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        />
    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="2px"/>




    <!--Texto e campo para senha-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:padding="6sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6sp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        />
    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="2px"/>


    <!--Botão para finalizar cadastro-->
    <Button
        android:layout_gravity="bottom|center"
        android:onClick="editarCadastroOnClick"
        android:text="Finalizar edição"
        android:textColor="@color/black"
        android:layout_marginTop="25sp"
        android:background="@android:color/transparent"
        style="@style/AudioFileInfoOverlayText"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:layout_gravity="bottom|center"
        android:onClick="removerCadastroOnClick"
        android:text="Remover minha conta"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="10sp"
        android:background="@android:color/transparent"
        style="@style/AudioFileInfoOverlayText"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="30dp" />


</LinearLayout>